--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: 1.0.8
+
+  # state management
+  flutter_riverpod: 2.6.1
+  riverpod_annotation: 2.6.1
+
+  # network
+  dio: 5.8.0+1
+  retrofit: 4.4.2
+  json_annotation: 4.9.0
+
+  # injection
+  get_it: 8.0.3
+  injectable: 2.5.0
+
+  # routing
+  go_router: 14.8.0
+
+  # utils
+  equatable: 2.0.7
+  copy_with_extension: 6.0.1
+  collection: 1.19.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +66,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  retrofit_generator: 9.1.9
+  build_runner: 2.4.15
+  injectable_generator: 2.7.0
+  copy_with_extension_gen: 6.0.1
+  riverpod_lint: 2.6.4
+  riverpod_generator: 2.6.4
+  flutter_gen_runner: 5.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
