--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   copy_with_extension: 6.0.1
   collection: 1.19.1
 
+  # internationalization
+  easy_localization: 3.0.7+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
