--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,19 +7,28 @@
         {
             "name": "enpal_tech_chall",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "args": [
+                "--dart-define-from-file=.env.json"
+            ]
         },
         {
             "name": "enpal_tech_chall (profile mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "flutterMode": "profile",
+            "args": [
+                "--dart-define-from-file=.env.json"
+            ]
         },
         {
             "name": "enpal_tech_chall (release mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "release"
+            "flutterMode": "release",
+            "args": [
+                "--dart-define-from-file=.env.json"
+            ]
         }
     ]
 }
