--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dev_dependencies:
   riverpod_lint: 2.6.4
   riverpod_generator: 2.6.4
   flutter_gen_runner: 5.9.0
+  json_serializable: 6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
