--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   copy_with_extension: 6.0.1
   collection: 1.19.1
   flex_color_scheme: 8.1.0
+  connectivity_plus: 6.1.3
 
   # internationalization
   easy_localization: 3.0.7+1
