--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,9 @@ dev_dependencies:
   riverpod_generator: 2.6.4
   flutter_gen_runner: 5.9.0
   json_serializable: 6.9.4
+  mockito: 5.4.5
+  connectivity_plus_platform_interface: 2.0.1
+  plugin_platform_interface: 2.1.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
