--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: 5.0.0
   retrofit_generator: 9.1.9
   build_runner: 2.4.15
   injectable_generator: 2.7.0
@@ -86,6 +86,7 @@ dev_dependencies:
   mockito: 5.4.5
   connectivity_plus_platform_interface: 2.0.1
   plugin_platform_interface: 2.1.8
+  shared_preferences: 2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
